--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -1,18 +1,18 @@
 {
   "dates": {
     "months": {
-      "0": "January",
-      "1": "February",
-      "2": "March",
-      "3": "April",
-      "4": "May",
-      "5": "June",
-      "6": "July",
-      "7": "August",
-      "8": "September",
-      "9": "October",
-      "10": "November",
-      "11": "December"
+      "1": "01 January",
+      "2": "02 February",
+      "3": "03 March",
+      "4": "04 April",
+      "5": "05 May",
+      "6": "06 June",
+      "7": "07 July",
+      "8": "08 August",
+      "9": "09 September",
+      "10": "10 October",
+      "11": "11 November",
+      "12": "12 December"
     }
   },
   "payPal": {
@@ -22,16 +22,20 @@
           "creditCard": {
             "form": {
               "title": "Finish your order",
-              "name": {
-                "label": "Name",
-                "placeholder": "John Doe"
+              "firstName": {
+                "label": "First name",
+                "placeholder": "John"
+              },
+              "lastName": {
+                "label": "Last name",
+                "placeholder": "Doe"
               },
               "number": {
-                "label": "Credit card number",
+                "label": "Card number",
                 "placeholder": "xxxx xxxx xxxx xxxx"
               },
               "cvv": {
-                "label": "Security code",
+                "label": "CVV",
                 "placeholder": "XXX"
               },
               "type": {
@@ -42,7 +46,14 @@
               },
               "expireYear": {
                 "label": "Expiration year"
-              }
+              },
+              "submit": "Validate payment"
+            },
+            "result": {
+              "name": "Name",
+              "card": "Card",
+              "id": "Reference",
+              "total": "Total"
             }
           }
         }
