--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -1,21 +1,42 @@
 {
   "dates": {
     "months": {
-      "1": "01 January",
-      "2": "02 February",
-      "3": "03 March",
-      "4": "04 April",
-      "5": "05 May",
-      "6": "06 June",
-      "7": "07 July",
-      "8": "08 August",
-      "9": "09 September",
-      "10": "10 October",
-      "11": "11 November",
-      "12": "12 December"
+      "1": "01 - January",
+      "2": "02 - February",
+      "3": "03 - March",
+      "4": "04 - April",
+      "5": "05 - May",
+      "6": "06 - June",
+      "7": "07 - July",
+      "8": "08 - August",
+      "9": "09 - September",
+      "10": "10 - October",
+      "11": "11 - November",
+      "12": "12 - December"
     }
   },
   "payPal": {
+    "invoice": {
+      "email": {
+        "title": "Invoice n°",
+        "details": {
+          "name": "Name",
+          "quantity": "Quantity",
+          "tax": "Tax",
+          "price": "Price",
+          "discount": "Discount"
+        },
+        "footer": {
+          "total": "Total",
+          "currency": "Currency",
+          "taxeIncluded": "Tax included",
+          "taxInclusive": {
+            "yes": "Yes",
+            "non": "Non"
+          }
+        }
+      }
+    },
     "payment": {
       "payer": {
         "fundingInstruments": {
