--- a/i18n/fr.i18n.json
+++ b/i18n/fr.i18n.json
@@ -1,21 +1,42 @@
 {
   "dates": {
     "months": {
-      "1": "01 Janvier",
-      "2": "02 Fevrier",
-      "3": "03 Mars",
-      "4": "04 Avril",
-      "5": "05 Mai",
-      "6": "06 Juin",
-      "7": "07 Juillet",
-      "8": "08 Août",
-      "9": "09 Septembre",
-      "10": "10 Octobre",
-      "11": "11 Novembre",
-      "12": "12 Décembre"
+      "1": "01 - Janvier",
+      "2": "02 - Fevrier",
+      "3": "03 - Mars",
+      "4": "04 - Avril",
+      "5": "05 - Mai",
+      "6": "06 - Juin",
+      "7": "07 - Juillet",
+      "8": "08 - Août",
+      "9": "09 - Septembre",
+      "10": "10 - Octobre",
+      "11": "11 - Novembre",
+      "12": "12 - Décembre"
     }
   },
   "payPal": {
+    "invoice": {
+      "email": {
+        "title": "Facture n°",
+        "details": {
+          "name": "Nom",
+          "quantity": "Quantité",
+          "tax": "Taxe",
+          "price": "Prix",
+          "discount": "Réduction"
+        },
+        "footer": {
+          "total": "Total",
+          "currency": "Devise",
+          "taxeIncluded": "Taxe incluse",
+          "taxInclusive": {
+            "yes": "Oui",
+            "non": "Non"
+          }
+        }
+      }
+    },
     "payment": {
       "payer": {
         "fundingInstruments": {
